tests/cases/fail/tuple_index_not_literal.p4
def main() -> None:
    pair: (int,float) = (1, 2.5)
    i: int = 0
    print(pair[i])
